# gyoretu

./: .gitignore  Cargo.toml  README.md
src/: add_source.wgsl  bg.wgsl  clear.wgsl  compute.rs  copy_tx2bf.wgsl  filters.rs  fluctus.rs  gui.rs  lib.rs  main.rs  model.rs  render.rs  render.wgsl  status.rs  util.rs  write.rs
src/filters/: bayer_16.wgsl  clear_old_buffer.wgsl  clear_pre_compose_buffer.wgsl  displacement_map.wgsl  edge_offset.wgsl  flip_x.wgsl  flip_y.wgsl  hsv_shift.wgsl  laplacian.wgsl  monochrome.wgsl  mosaïque.wgsl  noise_input.wgsl  peter_de_jong.wgsl  peter_de_jong_automove.wgsl  polar_coordinate.wgsl  read_from_pre_compose_buffer.wgsl  seed.wgsl  threshold.wgsl  transform.wgsl  vignette.wgsl  write_to_pre_compose_buffer.wgsl
src/gui/: control_filter.rs  control_info.rs  control_save.rs  control_setting.rs  control_source.rs  control_write.rs  mod.rs
