[package]
name = "gyoretu"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
wgpu = { version = "0.20.1"}
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.2.5"
async-executor = "1.4.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
futures-intrusive = "0.4"
rand = "0.8"
egui = "0.28"
egui-winit = "0.28"
egui-wgpu = "0.28"
egui_extras = "0.28"
num = "0.4.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
